--- a/force-app/main/default/layouts/Cost__c-Cost Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Cost__c-Cost Layout.layout-meta.xml
@@ -12,7 +12,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
-                <field>CostValue__c</field>
+                <field>Value__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
